# LuisaShadow

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  test.cu  test.h
CMake/: FindOptiX.cmake
resources/shaders/: diffuse.frag  diffuse.vert  display.frag  display.vert
src/: DynamicKeyframeGeometry.cpp  DynamicKeyframeGeometry.h  DynamicKeyframeGeometryHelper.cu  DynamicKeyframeGeometryHelper.h  Framebuffer.cpp  Framebuffer.h  Shader.h  ShadowRay.h  ShadowTracer.cpp  ShadowTracer.h  ShadowTracerHelper.cu  ShadowTracerHelper.h  StaticGeometry.cpp  StaticGeometry.h  check_cuda.h  main.cpp  serialize.h
